# workflowtest

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  rust.yml
aarch64/: Dockerfile.aarch64-musl-1.59.0  Dockerfile.aarch64-musl-1.59.0-dev-v1  Dockerfile.test  entrypoint.sh
arm64/: Dockerfile
assets/: config.yaml  init.yaml  workflowtest.service
assets/debian/: postinst  postrm  prerm
src/: main.rs
x86_64/: Dockerfile.x86_64-musl-1.59.0  Dockerfile.x86_64-musl-1.59.0-deb-v1  Dockerfile.x86_64-musl-1.62.0  Dockerfile.x86_64-musl-1.62.0-deb-v1  Dockerfile.x86_64-musl-1.62.1  Dockerfile.x86_64-musl-1.62.1-deb-v1
x86_64/etc/profile.d/: cargo.sh
