[package]
name = "workflowtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "workflowtest"
path = "src/main.rs"

[dependencies]
reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false}
tokio = { version = "1.17", features = ["full"] }
rustls = "0.20"
