[package]
name = "workflowtest"
version = "0.0.28"
edition = "2021"
authors = ["Xu Desheng <xudesheng@gmail.com>"]
description = "A test of CI workflow"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "workflowtest"
path = "src/main.rs"

[dependencies]
reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false}
tokio = { version = "1.17", features = ["full"] }
rustls = "0.20"
log="0.4"
ctrlc = "3.2.1"
env_logger = "0.9.0"
serde_yaml = "0.8"
serde_json= "1.0.79"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "*"

[package.metadata.deb]
name = "workflowtest"
extended-description = """\
A demo."""
priority = "optional"
section = "net"
depends = "$auto"
conf-files = ["/etc/workflowtest/config.yaml"]
maintainer-scripts="assets/debian"
assets = [
    ["assets/workflowtest.service", "/lib/systemd/system/workflowtest.service", "644"],
    ["assets/config.yaml", "/etc/workflowtest/config.yaml", "644"],
    ["target/x86_64-unknown-linux-musl/release/workflowtest", "/usr/sbin/", "755"],
]
